// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeAreaView can override padding styles 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    style={
      Object {
        "paddingTop": 0,
      }
    }
  >
    <View />
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;

exports[`SafeAreaView renders 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView>
    <View />
  </RNCSafeAreaView>
</RNCSafeAreaProvider>
`;
